--- a/src/app/kailash-math/kailash-math.component.html
+++ b/src/app/kailash-math/kailash-math.component.html
@@ -1,9 +1,10 @@
+
 <div class="whole">
 
   <div class="d-flex flex-column justify-content-between mb-3">
     <div class="d-flex  h-50 d-inline-block">
-      <app-left-aside class="col-md-3"></app-left-aside>
-      <div class="border col-md-6 h-50 d-inline-block main">
+      <!-- <app-left-aside class="col-md-3"></app-left-aside> -->
+      <div class="border col-md-8 h-50 d-inline-block main">
         <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
@@ -15,7 +16,7 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active" data-bs-interval="1000">
-              <img src=".././assets/imgs/16x9_by_Pengo.svg" class="d-block w-100" alt="...">
+              <img src=".././assets/imgs/banners/temple-swami.jpg" class="d-block w-100" alt="...">
               <a href="">
                 <div class="carousel-caption">
                   <h5 class="caption-text">अधिक जाने</h5>
@@ -23,7 +24,7 @@
               </a>
             </div>
             <div class="carousel-item" data-bs-interval="2000">
-              <img src=".././assets/imgs/16x9_by_Pengo.svg" class="d-block w-100" alt="...">
+              <img src=".././assets/imgs/banners/temple-swami.jpg" class="d-block w-100" alt="...">
               <a href="">
                 <div class="carousel-caption ">
                   <h5 class="caption-text">अधिक जाने</h5>
@@ -31,7 +32,7 @@
               </a>
             </div>
             <div class="carousel-item">
-              <img src=".././assets/imgs/16x9_by_Pengo.svg" class="d-block w-100" alt="...">
+              <img src=".././assets/imgs/banners/temple-swami.jpg" class="d-block w-100" alt="...">
               <a href="">
                 <div class="carousel-caption">
                   <h5 class="caption-text">अधिक जाने</h5>
@@ -51,167 +52,60 @@
       </button>
     </div>
   </div>
-      <app-right-aside class="col-md-3"></app-right-aside>
+      <app-right-aside class="col-md-4"></app-right-aside>
     </div>
-    <div class="container col-8 overflow-hidden">
-      
-      <div class="row row-cols-sm-1 row-cols-md-2 g-0">
+
+    <svg class="background-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 600">
+      <path fill="#ffff90" d="M0,165.5c0,0,83.3-105.5,208.3-101.9c125,3.6,198.6,103.4,320,118.3c121.4,14.9,112-85.3,203.8-69.6c91.8,15.7,101.8,116.9,221.1,143.4c119.3,26.5,100.2-87.2,211.8-68.9c111.6,18.4,95.9,116.9,231.9,163c136,46.1,122.8-129.9,234.9-84.4c112.1,45.4,125.7,142.9,125.7,142.9V0H0V165.5z"/>
+    </svg>
+
+
+    
+    <div class="grid-container">
+      <div class="grid-item">
         
-        <div class="col">
-          <div class="card" style="width:500px; height: 400px;">
-            <img class="card-img-top" style="height: inherit;" src="../assets/imgs/pexels-photo-5792641.jpeg"
-            alt="Card image">
-          <div class="card-body">
-            <h4 class="card-title">John Doe</h4>
-            <div class="row card-text">
-              <div class="truncate" style="text-align: justify;">
-                Praeterea iter est quasdam res quas Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti,
-                sapiente.
-                Itaque maxime sunt sequi porro, aperiam cumque. Maiores, nostrum quibusdam!lorem60
-                ex communilorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto distinctio quas nobis
-                quaerat
-                ut
-                tenetur fugiat minima perferendis non omnis!.
-              </div>
-            </div>
-            <a href="#" class="btn btn-primary" style="color: white;">See Profile</a>
-          </div>
-        </div>
+        <img src="../../assets/imgs/swami-ashu/abhinav-rashtra.jpeg" alt="Image 1">
+        <h2>Title 1</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit..</p>
+       
       </div>
-      
-      <div class="col">
-        <div class="card" style="width:500px; height: 400px;">
-          <img class="card-img-top" style="height: inherit;" src="../assets/imgs/pexels-photo-5792641.jpeg"
-          alt="Card image">
-          <div class="card-body">
-            <h4 class="card-title">John Doe</h4>
-            <div class="row card-text">
-              <div class="truncate" style="text-align: justify;">
-                Praeterea iter est quasdam res quas Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti,
-                sapiente.
-                Itaque maxime sunt sequi porro, aperiam cumque. Maiores, nostrum quibusdam!lorem60
-                ex communilorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto distinctio quas nobis
-                quaerat
-                ut
-                tenetur fugiat minima perferendis non omnis!.
-              </div>
-            </div>
-            <a href="#" class="btn btn-primary" style="color: white;">See Profile</a>
-          </div>
-        </div>
+      <div class="grid-item">
+        <img src="../../assets/imgs/swami-ashu/abhinav-rashtra.jpeg" alt="Image 2">
+        <h2>Title 2</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
       </div>
-      
-      <div class="col">
-        <div class="card" style="width:500px; height: 400px;">
-          <img class="card-img-top" style="height: inherit;" src="../assets/imgs/pexels-photo-5792641.jpeg"
-          alt="Card image">
-          <div class="card-body">
-            <h4 class="card-title">John Doe</h4>
-            <div class="row card-text">
-              <div class="truncate" style="text-align: justify;">
-                Praeterea iter est quasdam res quas Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti,
-                sapiente.
-                Itaque maxime sunt sequi porro, aperiam cumque. Maiores, nostrum quibusdam!lorem60
-                ex communilorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto distinctio quas nobis
-                quaerat
-                ut
-                tenetur fugiat minima perferendis non omnis!.
-              </div>
-            </div>
-            <a href="#" class="btn btn-primary" style="color: white;">See Profile</a>
-          </div>
-        </div>
+      <div class="grid-item">
+        <img src="../../assets/imgs/swami-ashu/abhinav-rashtra.jpeg" alt="Image 3">
+        <h2>Title 3</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
       </div>
-      
-      <div class="col">
-        <div class="card" style="width:500px; height: 400px;">
-          <img class="card-img-top" style="height: inherit;" src="../assets/imgs/pexels-photo-5792641.jpeg"
-          alt="Card image">
-          <div class="card-body">
-            <h4 class="card-title">John Doe</h4>
-            <div class="row card-text">
-              <div class="truncate" style="text-align: justify;">
-                Praeterea iter est quasdam res quas Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti,
-                sapiente.
-                Itaque maxime sunt sequi porro, aperiam cumque. Maiores, nostrum quibusdam!lorem60
-                ex communilorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto distinctio quas nobis
-                quaerat
-                ut
-                tenetur fugiat minima perferendis non omnis!.
-              </div>
-            </div>
-            <a href="#" class="btn btn-primary" style="color: white;">See Profile</a>
-          </div>
-        </div>
+      <div class="grid-item">
+        <img src="../../assets/imgs/swami-ashu/abhinav-rashtra.jpeg" alt="Image 4">
+        <h2>Title 4</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
       </div>
-      
-      <div class="col">
-        <div class="card" style="width:500px; height: 400px;">
-          <img class="card-img-top" style="height: inherit;" src="../assets/imgs/pexels-photo-5792641.jpeg"
-          alt="Card image">
-          <div class="card-body">
-            <h4 class="card-title">John Doe</h4>
-            <div class="row card-text">
-              <div class="truncate" style="text-align: justify;">
-                Praeterea iter est quasdam res quas Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti,
-                sapiente.
-                Itaque maxime sunt sequi porro, aperiam cumque. Maiores, nostrum quibusdam!lorem60
-                ex communilorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto distinctio quas nobis
-                quaerat
-                ut
-                tenetur fugiat minima perferendis non omnis!.
-              </div>
-            </div>
-            <a href="#" class="btn btn-primary" style="color: white;">See Profile</a>
-          </div>
-        </div>
+      <div class="grid-item">
+        <img src="../../assets/imgs/swami-ashu/abhinav-rashtra.jpeg" alt="Image 5">
+        <h2>Title 5</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
       </div>
-  
-      <div class="col">
-        <div class="card" style="width:500px; height: 400px;">
-          <img class="card-img-top" style="height: inherit;" src="../assets/imgs/pexels-photo-5792641.jpeg"
-          alt="Card image">
-          <div class="card-body">
-            <h4 class="card-title">John Doe</h4>
-            <div class="row card-text">
-              <div class="truncate" style="text-align: justify;">
-                Praeterea iter est quasdam res quas Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti,
-                sapiente.
-                Itaque maxime sunt sequi porro, aperiam cumque. Maiores, nostrum quibusdam!lorem60
-                ex communilorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto distinctio quas nobis
-                quaerat
-                ut
-                tenetur fugiat minima perferendis non omnis!.
-              </div>
-            </div>
-            <a href="#" class="btn btn-primary" style="color: white;">See Profile</a>
-          </div>
-        </div>
+      <div class="grid-item">
+        <img src="../../assets/imgs/swami-ashu/abhinav-rashtra.jpeg" alt="Image 6">
+        <h2>Title 6</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
       </div>
-      
-      <div class="col">
-        <div class="card" style="width:500px; height: 400px;">
-          <img class="card-img-top" style="height: inherit;" src="../assets/imgs/pexels-photo-5792641.jpeg"
-          alt="Card image">
-          <div class="card-body">
-            <h4 class="card-title">John Doe</h4>
-            <div class="row card-text">
-              <div class="truncate" style="text-align: justify;">
-                Praeterea iter est quasdam res quas Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti,
-                sapiente.
-                Itaque maxime sunt sequi porro, aperiam cumque. Maiores, nostrum quibusdam!lorem60
-                ex communilorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto distinctio quas nobis
-                quaerat
-                ut
-                tenetur fugiat minima perferendis non omnis!.
-              </div>
-            </div>
-            <a href="#" class="btn btn-primary" style="color: white;">See Profile</a>
-          </div>
-        </div>
+      <div class="grid-item">
+        <img src="../../assets/imgs/swami-ashu/abhinav-rashtra.jpeg" alt="Image 5">
+        <h2>Title 5</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
       </div>
-      
+      <div class="grid-item">
+        <img src="../../assets/imgs/swami-ashu/abhinav-rashtra.jpeg" alt="Image 6">
+        <h2>Title 6</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+      </div>
     </div>
+
   </div>
   
   
