--- a/src/app/right-aside/right-aside.component.scss
+++ b/src/app/right-aside/right-aside.component.scss
@@ -1,3 +1,16 @@
 aside {
-    background-color: rgb(255, 255, 186);
+    background-color: rgb(223, 223, 41);
+}
+
+.accordin-item{
+    background-color: #b50303;
+    color: #21097d;
+}
+
+.accordion-button{
+    background-color: #ffff90;
+}
+
+.accordion-body{
+    background-color: rgb(255, 242, 0);
 }
