Updated with dist

--- a/src/app/right-aside/right-aside.component.scss
+++ b/src/app/right-aside/right-aside.component.scss
@@ -8,9 +8,9 @@ aside {
 }
 
 .accordion-button{
-    background-color: #ffff90;
+    // background-color: #ffff90;
 }
 
 .accordion-body{
-    background-color: rgb(255, 242, 0);
+    background-color: rgb(255, 254, 227);
 }
