--- a/src/app/brandbar/brandbar.component.html
+++ b/src/app/brandbar/brandbar.component.html
@@ -2,7 +2,7 @@
 <div class="bg-warning fixed-top row">
     <div class="col"></div>
     <div class="d-flex col justify-content-center">
-        <img class="" height="80" src="../../assets/SwamiAshutoshanand-50kb.png" alt="" srcset="">
+        <img class="" height="80" src="../../assets/svg/header/logo-name.svg" alt="" srcset="">
     </div>
     <div class="toggle-bhakti d-flex col justify-content-end">
         <div class="row">
