--- a/src/app/kailash-math/kailash-math.component.scss
+++ b/src/app/kailash-math/kailash-math.component.scss
@@ -1,353 +1,370 @@
-.whole{
-  // background-image: url(../../assets/imgs/backgrounds/liquid-cheese.svg); background-position: center; background-repeat: no-repeat; background-size: cover;
+#Layer_1{
+  position: fixed;
+  top: 0;
 }
 
+.card::before {
+  content: ' ';
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0.1;
+  background-image: url(../../assets/svg/swastik.png);
+  background-attachment: fixed;
+  background-size: 30px;
+  background-repeat: repeat;
+  // background-position: 50% 0;
+  // background-size: cover;
+
+}
+
+// .whole > .flex-column::before{
+//   content: ' ';
+//   display: block;
+//   position: absolute;
+//   left: 0;
+//   top: 0;
+//   width: 100%;
+//   height: 100%;
+//   opacity: 0.1;
+//   background-image: url(../../assets/svg/om.svg);
+//   background-attachment: fixed;
+//   // background-size: 30px;
+//   background-repeat: repeat-y;
+// }
+
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 .row::after {
-    content: "";
-    clear: both;
-    display: table;
+  content: "";
+  clear: both;
+  display: table;
 }
 
 //   .caption-shadow{
 //     text-shadow: 1px 1px 1px black, 0 0 1em red, 0 0 0.2em black;
 // }
 .carousel img {
-    object-fit: contain;
+  object-fit: contain;
 }
 
 .carousel-control-next,
 .carousel-control-prev {
-    background-color: transparent;
+  background-color: transparent;
 }
 
 .carousel-caption {
-    padding-bottom: 40px;
-    background-color: transparent;
+  padding-bottom: 40px;
+  background-color: transparent;
 }
 
 .carousel-indicators {
-    background-color: transparent;
+  background-color: transparent;
 }
 
 .caption-text {
-    background-color: black;
-    color: yellow;
-    text-shadow: 0 0 1em rgb(255, 255, 255);
-    border: 5px double yellow;
-    display: inline;
-    border-radius: 10px;
-    padding: 8px;
+  background-color: black;
+  color: yellow;
+  text-shadow: 0 0 1em rgb(255, 255, 255);
+  border: 5px double yellow;
+  display: inline;
+  border-radius: 10px;
+  padding: 8px;
 }
 
 .caption-text:hover {
-    padding: 5;
-    background-color: black;
-    font-weight: bold;
-    color: white;
-    border: 5px double rgb(255, 26, 26);
+  padding: 5;
+  background-color: black;
+  font-weight: bold;
+  color: white;
+  border: 5px double rgb(255, 26, 26);
 }
 
-.main{
-    background-color: rgb(255, 255, 186);
+.main {
+  background-color: rgb(255, 255, 186);
 }
 
+/* Create two unequal columns that floats next to each other */
+/* Left column */
+.left-column {   
+  float: left;
+  width: 75%;
+}
+
+/* Right column */
+.right-column {
+  float: left;
+  width: 25%;
+  padding-left: 20px;
+}
+
+
+/* Fake image */
+.fakeimg {
+  background-color: #aaa;
+  width: 100%;
+  padding: 20px;
+}
+
+/* Add a card effect for articles */
+/*** Body ***/
+
+
+.card-avatar.avatar-border.mt-n5,
+.card-avatar.mr-44 {
+    border: 1.5px solid #15181a;
+    background: linear-gradient(#3c4349, #252a2d);
+    position: relative;
+    background-image: url(../../assets/imgs/swami-ashu/abhinav-rashtra.jpeg);
+    background-size: 130%;
+    background-position: 20% 10%;
+}
+
+
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+@media screen and (max-width: 800px) {
+  .left-column, .right-column {   
+    width: 100%;
+    padding: 0;
+  }
+}
 
 .truncate {
   overflow: hidden;
   text-overflow: ellipsis;
   display: -webkit-box;
-  -webkit-line-clamp: 10; /* number of lines to show */
-          line-clamp: 10;
+  -webkit-line-clamp: 10;
+  /* number of lines to show */
+  line-clamp: 10;
   -webkit-box-orient: vertical;
 }
 
 .footer-light {
-    padding:50px 0;
-    // color:#000000;
-    background-color:#ffe065;
-  }
-  
-  .footer-light h3 {
-    margin-top:0;
-    margin-bottom:12px;
-    font-weight:bold;
-    font-size:16px;
-  }
-  
-  .footer-light ul {
-    padding:0;
-    list-style:none;
-    line-height:1.6;
-    font-size:14px;
-    margin-bottom:0;
-  }
-  
-  .footer-light ul a {
-    // color:inherit;
-    text-decoration:none;
-    opacity:0.6;
-  }
-  
-  .footer-light ul a:hover {
-    opacity:0.8;
-  }
-  
-  .footer-light .item.text {
-    margin-bottom:36px;
-  }
-  
-  
-  .footer-light .item.text iframe {
-    width: 500px;
-    height: 200px;
-    border:1px solid blue;
-    border-radius: 8px;
-    margin-bottom:0;
-  }
-  
+  padding: 50px 0;
+  // color:#000000;
+  background-color: #ffe065;
+}
+
+.footer-light h3 {
+  margin-top: 0;
+  margin-bottom: 12px;
+  font-weight: bold;
+  font-size: 16px;
+}
+
+.footer-light ul {
+  padding: 0;
+  list-style: none;
+  line-height: 1.6;
+  font-size: 14px;
+  margin-bottom: 0;
+}
+
+.footer-light ul a {
+  // color:inherit;
+  text-decoration: none;
+  opacity: 0.6;
+}
+
+.footer-light ul a:hover {
+  opacity: 0.8;
+}
+
+.footer-light .item.text {
+  margin-bottom: 36px;
+}
+
+
+.footer-light .item.text iframe {
+  width: 500px;
+  height: 200px;
+  border: 1px solid blue;
+  border-radius: 8px;
+  margin-bottom: 0;
+}
+
+.footer-light .item.social {
+  text-align: center;
+}
+
+@media (max-width:991px) {
   .footer-light .item.social {
-    text-align:center;
-  }
-  
-  @media (max-width:991px) {
-    .footer-light .item.social {
-      text-align:center;
-      margin-top:20px;
-    }
-  }
-  
-
-  .footer-light .item.social > a {
-    font-size:20px;
-    width:36px;
-    height:36px;
-    line-height:36px;
-    display:inline-block;
-    text-align:center;
-    border-radius:50%;
-    box-shadow:0 0 0 1px rgba(255,255,255,0.4);
-    margin:0 8px;
-    // color:#fff;
-    opacity:1;
-  }
-  
-  .footer-light .item.social > a:hover {
-    opacity:0.9;
-  }
-  
-  .footer-light .copyright {
-    text-align:center;
-    padding-top:24px;
-    opacity:0.8;
-    font-size:13px;
-    margin-bottom:0;
-  }
-
-  .footer p{
-    color: aliceblue;
-  }
-
-  .footer{
-    color: white;
-  }
-
-  .socials:hover{
-    opacity: 0.8;
-  }
-
-  .footer .navitems a{
-    padding: 20px;
-    color: wheat;
-  }
-
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    margin: 8px 0;
-  }
-
-  p {
-    margin: 0;
-  }
-
-  .spacer {
-    flex: 1;
-  }
-
-  .toolbar {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    height: 60px;
-    display: flex;
-    align-items: center;
-    background-color: #1976d2;
-    color: white;
-    font-weight: 600;
-  }
-
-  .toolbar img {
-    margin: 0 16px;
-  }
-
-  .toolbar #twitter-logo {
-    height: 40px;
-    margin: 0 8px;
-  }
-
-  .toolbar #youtube-logo {
-    height: 40px;
-    margin: 0 16px;
-  }
-
-  .toolbar #twitter-logo:hover,
-  .toolbar #youtube-logo:hover {
-    opacity: 0.8;
-  }
-
-  .content {
-    display: flex;
-    margin: 82px auto 32px;
-    padding: 0 16px;
-    max-width: 960px;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  svg.material-icons {
-    height: 24px;
-    width: auto;
-  }
-
-  svg.material-icons:not(:last-child) {
-    margin-right: 8px;
-  }
-
-  .card svg.material-icons path {
-    fill: #888;
-  }
-  .card-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    margin-top: 16px;
-  }
-
-  .card {
-    all: unset;
-    border-radius: 4px;
-    border: 1px solid #eee;
-    background-color: #fafafa;
-    height: 40px;
-    width: 200px;
-    margin: 0 8px 16px;
-    padding: 16px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    transition: all 0.2s ease-in-out;
-    line-height: 24px;
-  }
-
-  .card-container .card:not(:last-child) {
-    margin-right: 0;
-  }
-
-  .card.card-small {
-    height: 16px;
-    width: 168px;
-  }
-
-  .card-container .card:not(.highlight-card) {
-    cursor: pointer;
-  }
-
-  .card-container .card:not(.highlight-card):hover {
-    transform: translateY(-3px);
-    box-shadow: 0 4px 17px rgba(0, 0, 0, 0.35);
-  }
-
-  .card-container .card:not(.highlight-card):hover .material-icons path {
-    fill: rgb(105, 103, 103);
-  }
-
-  .card.highlight-card {
-    background-color: #1976d2;
-    color: white;
-    font-weight: 600;
-    border: none;
-    width: auto;
-    min-width: 30%;
-    position: relative;
-  }
-
-  .card.card.highlight-card span {
-    margin-left: 60px;
-  }
-
-
-  /* Responsive Styles */
-  @media screen and (max-width: 767px) {
-
-  }
-
-  @media screen and (max-width: 775px) {
-    aside {
-      display: none;
-      visibility: hidden;
-    }
-  }
-
-  .grid-container {
-    margin-top: 200px;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-    gap: 20px;
-    padding: 50px;
-  }
-
-  .grid-item {
-    border: 1px solid #ccc;
-    border-radius: 10px;
-    padding: 20px;
     text-align: center;
-    background-color: #e2ff4f25;
+    margin-top: 20px;
   }
+}
 
-  .grid-item img {
-    max-width: 100%;
-    height: auto;
-    margin-bottom: 10px;
-  }
 
-  .read-more {
+.footer-light .item.social>a {
+  font-size: 20px;
+  width: 36px;
+  height: 36px;
+  line-height: 36px;
+  display: inline-block;
+  text-align: center;
+  border-radius: 50%;
+  box-shadow: 0 0 0 1px rgba(255, 255, 255, 0.4);
+  margin: 0 8px;
+  // color:#fff;
+  opacity: 1;
+}
+
+.footer-light .item.social>a:hover {
+  opacity: 0.9;
+}
+
+.footer-light .copyright {
+  text-align: center;
+  padding-top: 24px;
+  opacity: 0.8;
+  font-size: 13px;
+  margin-bottom: 0;
+}
+
+.footer p {
+  color: aliceblue;
+}
+
+.footer {
+  color: white;
+}
+
+.socials:hover {
+  opacity: 0.8;
+}
+
+.footer .navitems a {
+  padding: 20px;
+  color: wheat;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 8px 0;
+}
+
+p {
+  margin: 0;
+}
+
+.spacer {
+  flex: 1;
+}
+
+.toolbar {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  background-color: #1976d2;
+  color: white;
+  font-weight: 600;
+}
+
+.toolbar img {
+  margin: 0 16px;
+}
+
+.toolbar #twitter-logo {
+  height: 40px;
+  margin: 0 8px;
+}
+
+.toolbar #youtube-logo {
+  height: 40px;
+  margin: 0 16px;
+}
+
+.toolbar #twitter-logo:hover,
+.toolbar #youtube-logo:hover {
+  opacity: 0.8;
+}
+
+.content {
+  display: flex;
+  margin: 82px auto 32px;
+  padding: 0 16px;
+  max-width: 960px;
+  flex-direction: column;
+  align-items: center;
+}
+
+
+
+
+/* Responsive Styles */
+@media screen and (max-width: 767px) {}
+
+@media screen and (max-width: 775px) {
+  aside {
     display: none;
+    visibility: hidden;
   }
+}
 
-  .show {
-    display: block;
-  }
+.grid-container {
+  margin-top: 200px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  gap: 20px;
+  padding: 50px;
+  background-color: rgba(255, 255, 255, 0.1);
+}
 
-  .background-svg {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    z-index: -1;
-  }
+.grid-item {
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  padding: 20px;
+  text-align: center;
+  // background-image: url(../../assets/svg/swastik.png);
+  background-repeat: no-repeat;
+  background-color: #ffe065;
+}
 
-  .om-symbol {
-    width: 150px;
-    height: 150px;
-    fill: #000000;
-  }
+.grid-item img {
+  max-width: 100%;
+  height: auto;
+  margin-bottom: 10px;
+}
+
+.read-more {
+  display: none;
+}
+
+.show {
+  display: block;
+}
+
+.background-svg {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: -1;
+}
+
+.om-symbol {
+  width: 150px;
+  height: 150px;
+  fill: #000000;
+}
