--- a/src/app/kailash-math/kailash-math.component.html
+++ b/src/app/kailash-math/kailash-math.component.html
@@ -61,18 +61,68 @@
 
     <div class="row">
       <div class="left-column">
-        <div class="card text-center border-0 mb-4">
-          <h2>TITLE HEADING</h2>
-          <div class="fakeimg" style="height:200px;">Image</div>
-          <h5>Title description, Dec 7, 2017</h5>
-          <p>Some text..</p>
-          <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-            ullamco.</p>
+        <div class="card border-0 mb-4" style="background-color: rgb(255, 245, 230);">
+          <div class="text-center">
+            <h2 style="display: block; color: brown;">कैलाश मठ, काशी</h2>
+            <!-- <div class="fakeimg" style="height:200px;">Image</div> -->
+            <h5>स्थापना : Dec 7, 2017</h5>
+          </div>
+
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-md-8">
+                <p style="font-size: 1.25rem; text-align: justify;" >कैलाश मठ, जहां भगवान शिव की पूजा उनके शिवलिंगम में की जाती है,
+                  वाराणसी के भेलूपुर गांव में स्थित है। यह मंदिर वाराणसी के साथ-साथ भारत के अन्य हिस्सों में भी बेहद
+                  प्रसिद्ध है। यह मंदिर शहर के केंद्र में स्थित है और विश्वेश्वर या विश्वनाथ के नाम से जाना जाता है, जो
+                  शिव के ज्योतिर्लिंग से जुड़ा हुआ है। इस पुराने मंदिर को इतिहास में कई बार नष्ट किया गया और फिर से
+                  निर्माण किया गया है।
+                </p>
+              </div>
+              <div class="col-md-4 float-right">
+                <img src="https://www.simplilearn.com/ice9/free_resources_article_thumb/what_is_image_Processing.jpg"
+                  alt="" srcset="" width="100%" height="100%">
+              </div>
+            </div>
+            <p class="py-4" style="font-size: 1.2rem;">
+              यहां के पवित्र मंदिर में हर साल श्रावण मास और महाशिवरात्रि के अवसर पर धूमधाम से त्योहार मनाए जाते हैं।
+              लोग भारत और विदेशों से भी इस पवित्र स्थान पर भगवान शिव की पूजा करने, पवित्र कुएं से पानी लेने और दर्शन
+              करने के लिए यहां आते हैं। देव दिवाली और प्रोडोश व्रत भी स्थानीय भक्तों के बीच कैलाश मठ के परिसर में
+              मनाए जाते हैं। यहां मेले आयोजित किए जाते हैं और शिवरात्रि की रात को लोग उपवास करते हैं, भगवान शिव के
+              नाम के भजन गाते हैं और मान्यता है कि इस पवित्र दिन पर भगवान शिव ने पार्वती माता से विवाह किया था।
+
+              कैलाश मठ यात्रा का सबसे अच्छा समय शिवरात्रि होता है, क्योंकि भारत के विभिन्न हिस्सों से लोग इस दिन
+              भगवान शिव का आशीर्वाद प्राप्त करने के लिए यहां आते हैं। इस मंदिर की यात्रा करने वाले श्रद्धालुओं को इस
+              पवित्र स्थान का दर्शन करने, भगवान शिव की पूजा करने और अन्य धार्मिक आयोजनों में भाग लेने का अवसर मिलता
+              है।
+
+              कैलाश मठ न केवल एक आध्यात्मिक स्थल है, बल्कि यह एक प्रमुख पर्यटन स्थल भी है। यहां के मठ की सुंदरता,
+              धार्मिक महत्व और पवित्रता ने इसे देशभर में प्रसिद्ध किया है। कैलाश मठ यात्रा भारतीय संस्कृति,
+              आध्यात्मिकता और शिव भक्ति को समर्पित है और श्रद्धालुओं के लिए एक महत्वपूर्ण स्थल है।
+
+              इस मंदिर में भगवान शिव की महिमा और महत्व का अनुभव करने के लिए दर्शन करना आवश्यक है। यहां आने वाले लोग
+              अपने आंतरिक स्वयं को ध्यान देने और आध्यात्मिक उन्नति का अनुभव करने का मौका प्राप्त करते हैं। शिव
+              भक्तों के लिए यह मंदिर एक पवित्र स्थान है जहां वे अपनी श्रद्धा का अभिव्यक्ति कर सकते हैं और शिव के
+              समीपता का आनंद ले सकते हैं।
+
+              कैलाश मठ एक ऐसा स्थान है जहां भगवान शिव के आदर्शों और सनातन धर्म के मूल्यों को मान्यता दी जाती है। यह
+              धार्मिक स्थान भारतीय संस्कृति और आध्यात्मिकता की महत्वपूर्ण भूमिका को प्रदर्शित करता है। कैलाश मठ का
+              आदर्श श्रम, सेवा, संयम और भगवान के प्रति श्रद्धा में समाहित है। यह स्थान भगवान शिव की कृपा और आशीर्वाद
+              का प्रतीक है और जीवन के उद्देश्य की प्राप्ति के लिए लोगों को प्रेरित करता है।
+
+              कैलाश मठ आध्यात्मिक संगठनों की महत्वपूर्ण भूमिका निभाता है और धार्मिकता, समरसता और सामाजिक सेवा को
+              बढ़ावा देता है। इसके माध्यम से, लोग अपार ज्ञान और आध्यात्मिकता को प्राप्त करते हैं और समरसता के माध्यम
+              से समाज को मजबूत बनाने का प्रयास करते हैं।
+
+              कैलाश मठ एक प्रमुख आध्यात्मिक स्थल है जहां लोग आकर्षित होते हैं और अपने जीवन को धार्मिक और आध्यात्मिक
+              मार्ग पर ले जाने का प्रयास करते हैं। यहां के धार्मिक आयोजनों, पूजा-अर्चना के अवसरों और आध्यात्मिक
+              संगठनों के द्वारा, लोग अपनी आत्मा को प्रशांति, संतुलन और शांति की ओर ले जाने के लिए एक साथ आते हैं।
+
+              कैलाश मठ यात्रा करने के लिए, लोग वाराणसी में उपलब्ध सार्वजनिक परिवहन के माध्यम से यात्रा कर सकते हैं।
+              वाराणसी एयरपोर्ट और रेलवे स्टेशन से मठ के पास टैक्सी और ऑटोरिक्शा उपलब्ध हैं। यात्री अपनी सुविधानुसार
+              इन माध्यमों का उपयोग करके कैलाश मठ तक पहुंच सकते हैं।</p>
+          </div>
         </div>
         <div class="grid-container">
-          <app-mahamandaleswar-card *ngFor="let each of mahaMandaleswars"
-            [receivedData]="each"></app-mahamandaleswar-card>
           <app-mahamandaleswar-card *ngFor="let each of mahaMandaleswars"
             [receivedData]="each"></app-mahamandaleswar-card>
         </div>
