--- a/src/app/kailash-math/kailash-math.component.scss
+++ b/src/app/kailash-math/kailash-math.component.scss
@@ -2,6 +2,9 @@
   position: fixed;
   top: 0;
 }
+.card{
+  margin: 15px;
+}
 
 .card::before {
   content: ' ';
@@ -368,3 +371,23 @@ p {
   height: 150px;
   fill: #000000;
 }
+
+.text-left{
+  float: left;
+}
+/* Set gray background color and 100% height */
+.sidenav {
+  padding-top: 20px;
+  background-color: #f1f1f1;
+  // height: 100%;
+  float: right;
+}
+
+    /* On small screens, set height to 'auto' for sidenav and grid */
+    @media screen and (max-width: 767px) {
+      .sidenav {
+        height: auto;
+        padding: 15px;
+      }
+      .row.content {height:auto;} 
+    }
