--- a/src/app/kailash-math/kailash-math.component.scss
+++ b/src/app/kailash-math/kailash-math.component.scss
@@ -3,7 +3,7 @@
   top: 0;
 }
 .card{
-  margin: 15px;
+  // margin: 15px;
 }
 
 .card::before {
@@ -24,20 +24,6 @@
 
 }
 
-// .whole > .flex-column::before{
-//   content: ' ';
-//   display: block;
-//   position: absolute;
-//   left: 0;
-//   top: 0;
-//   width: 100%;
-//   height: 100%;
-//   opacity: 0.1;
-//   background-image: url(../../assets/svg/om.svg);
-//   background-attachment: fixed;
-//   // background-size: 30px;
-//   background-repeat: repeat-y;
-// }
 
 * {
   box-sizing: border-box;
@@ -120,9 +106,9 @@
 
 .card-avatar.avatar-border.mt-n5,
 .card-avatar.mr-44 {
-    border: 1.5px solid #15181a;
-    background: linear-gradient(#3c4349, #252a2d);
-    position: relative;
+    // border: 1.5px solid #15181a;
+    // background: linear-gradient(#3c4349, #252a2d);
+    // position: relative;
     background-image: url(../../assets/imgs/swami-ashu/abhinav-rashtra.jpeg);
     background-size: 130%;
     background-position: 20% 10%;
@@ -324,53 +310,33 @@ p {
   }
 }
 
-.grid-container {
-  margin-top: 200px;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-  gap: 20px;
-  padding: 50px;
-  background-color: rgba(255, 255, 255, 0.1);
-}
-
-.grid-item {
-  border: 1px solid #ccc;
-  border-radius: 10px;
-  padding: 20px;
-  text-align: center;
-  // background-image: url(../../assets/svg/swastik.png);
-  background-repeat: no-repeat;
-  background-color: #ffe065;
-}
-
-.grid-item img {
-  max-width: 100%;
-  height: auto;
-  margin-bottom: 10px;
-}
-
-.read-more {
-  display: none;
-}
+// .grid-container {
+//   margin-top: 200px;
+//   display: grid;
+//   grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+//   gap: 20px;
+//   padding: 50px;
+//   background-color: rgba(255, 255, 255, 0.1);
+// }
 
 .show {
   display: block;
 }
 
-.background-svg {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  z-index: -1;
-}
+// .background-svg {
+//   position: fixed;
+//   top: 0;
+//   left: 0;
+//   width: 100vw;
+//   height: 100vh;
+//   z-index: -1;
+// }
 
-.om-symbol {
-  width: 150px;
-  height: 150px;
-  fill: #000000;
-}
+// .om-symbol {
+//   width: 150px;
+//   height: 150px;
+//   fill: #000000;
+// }
 
 .text-left{
   float: left;
