--- a/src/app/brandbar/brandbar.component.html
+++ b/src/app/brandbar/brandbar.component.html
@@ -2,6 +2,6 @@
 <div class="bg-warning fixed-top row">
     <!-- <div class="col"></div> -->
     <div class="d-flex col justify-content-center">
-        <img class="" height="80" src="../../assets/svg/header/logo-name.svg" alt="" srcset="">
+        <img class="px-3" src="../../assets/svg/header/kashi.svg" alt="" srcset="">
     </div>
 </div>
