--- a/src/app/brandbar/brandbar.component.scss
+++ b/src/app/brandbar/brandbar.component.scss
@@ -1,13 +1,3 @@
-// @media (max-width:767px) {
-//   .toggle-bhakti{
-//     border: 1ps solid blue;
-//     padding: 0;
-//   }
-//     .toggle-bhakti span{
-//       display: none;
-//     }
-//   }
-
-//   .mat-mdc-slide-toggle{
-//     // background: #cf3d3d;
-// }
+.brand-imaage{
+    max-height: 70px;
+}
