--- a/src/app/kailash-math/kailash-math.component.html
+++ b/src/app/kailash-math/kailash-math.component.html
@@ -115,7 +115,7 @@
               इन माध्यमों का उपयोग करके कैलाश मठ तक पहुंच सकते हैं।</p>
           </div>
         </div>
-        <div>
+        <div class="grid-container">
           <app-mahamandaleswar-card *ngFor="let each of mahaMandaleswars"
             [receivedData]="each"></app-mahamandaleswar-card>
         </div>
@@ -126,8 +126,8 @@
         </div>
         <div class="card">
           <h3>Popular Post</h3>
-          <div class="fakeimg">Image</div><br>
-          <div class="fakeimg">Image</div><br>
+          <div class="fakeimg"><img src="https://lh5.googleusercontent.com/p/AF1QipPVFk_GX-3fSQIgcl75B-qGlWjAesqa2FKxjO-f=w500-h240-k-no" alt="" srcset=""></div><br>
+          <div class="fakeimg"><img src="https://rgyan-flutter200503-dev.s3.ap-south-1.amazonaws.com/public/pg-content/uploads/2018-03/kailash-muttt.jpg" alt="" srcset=""></div><br>
           <div class="fakeimg">Image</div>
         </div>
         <div class="card">
