--- a/src/app/mahamandaleswar-card/mahamandaleswar-card.component.html
+++ b/src/app/mahamandaleswar-card/mahamandaleswar-card.component.html
@@ -13,10 +13,9 @@
             
             <div>
                 
-                <p class="mt-4 mb-3">Minim dolor in amet nulla laboris enim dolore consequat plorem40
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis accusantium libero omnis dolor, vel
-                    impedit nulla, esse eos hic eum aperiam! Ab perspiciatis illum, quia totam iure molestias eaque facilis!
-                    roident fugiat culpa eiusmod proiden</p>
+                <p class="mt-4 mb-3">महामंडलेश्वर का पद संतों और आध्यात्मिक गुरुओं की महत्वपूर्ण पदवी है, और कैलाश आश्रम का महामंडलेश्वर इस पद की महत्वाकांक्षी और प्रभावशाली प्रतीत होते हैं। कैलाश आश्रम, जो आध्यात्मिक और योग के क्षेत्र में विख्यात है, उनके नेतृत्व में संचालित होता है।
+
+                    महामंडलेश्वर का कार्यक्षेत्र व्यापक होता है और वे आध्यात्मिक संदेश, ध्यान एवं योग के माध्यम से लोगों को संतुष्टि और मुक्ति की ओर प्रेरित करते हैं। वे अपने आदर्शवादी दृष्टिकोण और आध्यात्मिक ज्ञान के लिए प्रसिद्ध हैं।</p>
                 </div>
                 <div *ngFor="let map of mmDetails">
                     <h2>Map</h2>
