--- a/src/app/kailash-math/kailash-math.component.scss
+++ b/src/app/kailash-math/kailash-math.component.scss
@@ -96,23 +96,17 @@
   padding: 20px;
 }
 
-/* Add a card effect for articles */
-/*** Body ***/
-
+.fakeimg img{
+  width: 100%;
+}
 
 .card-avatar.avatar-border.mt-n5,
 .card-avatar.mr-44 {
-    // border: 1.5px solid #15181a;
-    // background: linear-gradient(#3c4349, #252a2d);
-    // position: relative;
     background-image: url(../../assets/imgs/swami-ashu/abhinav-rashtra.jpeg);
     background-size: 130%;
     background-position: 20% 10%;
 }
 
-
-
-/* Clear floats after the columns */
 .row:after {
   content: "";
   display: table;
@@ -131,14 +125,12 @@
   text-overflow: ellipsis;
   display: -webkit-box;
   -webkit-line-clamp: 10;
-  /* number of lines to show */
   line-clamp: 10;
   -webkit-box-orient: vertical;
 }
 
 .footer-light {
   padding: 50px 0;
-  // color:#000000;
   background-color: #ffe065;
 }
 
@@ -158,7 +150,6 @@
 }
 
 .footer-light ul a {
-  // color:inherit;
   text-decoration: none;
   opacity: 0.6;
 }
@@ -306,33 +297,19 @@ p {
   }
 }
 
-// .grid-container {
-//   margin-top: 200px;
-//   display: grid;
-//   grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-//   gap: 20px;
-//   padding: 50px;
-//   background-color: rgba(255, 255, 255, 0.1);
-// }
+.grid-container {
+  margin-top: 200px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  gap: 20px;
+  padding: 50px;
+  background-color: rgba(255, 255, 255, 0.1);
+}
 
 .show {
   display: block;
 }
 
-// .background-svg {
-//   position: fixed;
-//   top: 0;
-//   left: 0;
-//   width: 100vw;
-//   height: 100vh;
-//   z-index: -1;
-// }
-
-// .om-symbol {
-//   width: 150px;
-//   height: 150px;
-//   fill: #000000;
-// }
 
 .text-left{
   float: left;
