--- a/src/app/kailash-math/kailash-math.component.scss
+++ b/src/app/kailash-math/kailash-math.component.scss
@@ -298,11 +298,11 @@ p {
 }
 
 .grid-container {
-  margin-top: 200px;
+  // margin-top: 200px;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: 20px;
-  padding: 50px;
+  // padding: 50px;
   background-color: rgba(255, 255, 255, 0.1);
 }
 
